# SmolEngine

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
Engine/: CMakeLists.txt
Engine/Canvas2D/: CMakeLists.txt
Engine/Canvas2D/Private/: Canvas2D.cpp
Engine/Canvas2D/Public/: Canvas2D.hpp
Engine/Core/: CMakeLists.txt
Engine/Core/Private/: Actor.cpp  ActorFactory.cpp  Assert.cpp  PathUtil.cpp  StringUtil.cpp
Engine/Core/Public/: Actor.hpp  ActorFactory.hpp  Assert.hpp  Component.hpp  ComponentFWD.hpp  CoreFWD.hpp  EnumUtil.hpp  GenericHandle.hpp  HashUtil.hpp  IntMath.hpp  LinearAlgebra.hpp  MainLoop.hpp  Object.hpp  PathUtil.hpp  Primitives.hpp  PtrUtil.hpp  Semantics.hpp  SlotMap.hpp  StringUtil.hpp  VariantUtil.hpp  View.hpp
Engine/Core/Test/: OBBTest.cpp  SlotMapTest.cpp
Engine/D2DCanvas/: CMakeLists.txt
Engine/D2DCanvas/Private/: D2DCanvas.cpp
Engine/D2DCanvas/Public/: D2DCanvas.hpp
Engine/DX11RHI/: CMakeLists.txt
Engine/DX11RHI/Private/: DX11Buffer.cpp  DX11Buffer.hpp  DX11CommandList.cpp  DX11CommandList.hpp  DX11Definitions.hpp  DX11Device.cpp  DX11Fence.hpp  DX11FrameScope.hpp  DX11PipelineState.cpp  DX11PipelineState.hpp  DX11Sampler.cpp  DX11Sampler.hpp  DX11Swapchain.cpp  DX11Swapchain.hpp  DX11Texture.cpp  DX11Texture.hpp  DX11Util.cpp
Engine/DX11RHI/Public/: DX11Device.hpp  DX11Util.hpp
Engine/Gameplay/: CMakeLists.txt
Engine/Gameplay/Private/: ActorDeserializer.cpp  ActorDeserializer.hpp  ActorFactory.cpp  ActorRegistry.cpp  CharacterController.cpp  LogLocal.hpp  SpawnContext.cpp  World.cpp
Engine/Gameplay/Public/: ActorFactory.hpp  ActorRegistry.hpp  CharacterController.hpp  SpawnContext.hpp  World.hpp
Engine/Gameplay/Sample/: CMakeLists.txt  CharacterControllerSample.cpp  TestPawn.cpp  TestPawn.hpp
Engine/ImGuiCanvas/: CMakeLists.txt
Engine/ImGuiCanvas/Private/: ImGuiCanvas.cpp
Engine/ImGuiCanvas/Public/: ImGuiCanvas.hpp
Engine/Input/: CMakeLists.txt
Engine/Input/Private/: InputAction.cpp  InputConfig.cpp  InputManager.cpp  InputModifier.cpp  LogLocal.hpp  ModifierFactory.cpp  ModifierFactory.hpp  ModifierRegistry.cpp
Engine/Input/Public/: IInputManager.hpp  InputAction.hpp  InputConfig.hpp  InputManager.hpp  InputModifier.hpp  InputValue.hpp  MockInputManager.hpp  ModifierRegistry.hpp  NegateModifier.hpp  SwizzleModifier.hpp
Engine/Input/Sample/: CMakeLists.txt  InputManagerSample.cpp
Engine/Input/Test/: InputManagerTest.cpp  InputModifierTest.cpp
Engine/Log/: CMakeLists.txt
Engine/Log/Private/: ConsoleSink.cpp  ConsoleSink.hpp  Log.cpp  Logger.cpp  Logger.hpp  Sink.cpp
Engine/Log/Public/: Log.hpp  LogDefinitions.hpp  Logger.hpp  Sink.hpp
Engine/MetalRHI/: CMakeLists.txt
Engine/MetalRHI/Private/: AutoreleasePoolScope.hpp  MetalBuffer.cpp  MetalBuffer.hpp  MetalCommandList.cpp  MetalCommandList.hpp  MetalDevice.cpp  MetalFence.cpp  MetalFence.hpp  MetalFrameScope.hpp  MetalPipelineState.cpp  MetalPipelineState.hpp  MetalSampler.cpp  MetalSampler.hpp  MetalSwapchain.cpp  MetalSwapchain.hpp  MetalTexture.cpp  MetalTexture.hpp  MetalUtil.cpp  MetalUtil.hpp
Engine/MetalRHI/Public/: MetalDevice.hpp
Engine/Physics/: CMakeLists.txt
Engine/Physics/Private/: PhysicsEngine2D.cpp
Engine/Physics/Public/: Collider2D.hpp  PhysicsEngine2D.hpp  Shape2D.hpp
Engine/Platform/: CMakeLists.txt
Engine/Platform/Private/: InputProvider.cpp  LogLocal.hpp  MockInputProvider.cpp  OS.cpp  RuntimeConfig.cpp  SDLInputProvider.cpp  SDLInputProvider.hpp  SDLWindow.cpp  SDLWindow.hpp  Timer.cpp  Window.cpp
Engine/Platform/Public/: InputProvider.hpp  KeyCode.hpp  MainLoop.hpp  MockInputProvider.hpp  OS.hpp  RuntimeConfig.hpp  Timer.hpp  Window.hpp
Engine/Platform/Test/: InputProviderTest.cpp  MockInputProvider.cpp  MockInputProvider.hpp
Engine/RHI/: CMakeLists.txt
Engine/RHI/Common/: RHIAPI.hpp  RHIDefinitions.hpp  RHIFWD.hpp  Vertex.hpp
Engine/RHI/Private/: CommandListPool.cpp  CommandListPool.hpp  FramePacer.cpp  FramePacer.hpp  LogLocal.hpp  RHIDefinitions.cpp  RHIDevice.cpp
Engine/RHI/Public/: CommandListPool.hpp  FramePacer.hpp  RHIBuffer.hpp  RHICommandList.hpp  RHIDevice.hpp  RHIFence.hpp  RHIFrameScope.hpp  RHIPipelineState.hpp  RHISampler.hpp  RHISwapchain.hpp  RHITexture.hpp
Engine/RHI/Sample/: CMakeLists.txt  TextureSample.cpp
Engine/Reflection/: CMakeLists.txt
Engine/Reflection/Private/: ActorFactory.cpp  ClassRegistry.cpp  Object.cpp  TypeTraits.cpp
Engine/Reflection/Public/: ActorFactory.hpp  ClassBuilder.hpp  ClassRegistry.hpp  Object.hpp  PropertyDesc.hpp  TypeInfo.hpp
Engine/Reflection/Test/: ClassRegistryTest.cpp
Engine/Render/: CMakeLists.txt
Engine/Render/Private/: CameraConfig.hpp  LineProxy.cpp  PostRenderer.cpp  Renderer.cpp  ShapeRenderer.cpp  SpriteProxy.cpp  SpriteRenderer.cpp  UIRenderer.cpp
Engine/Resource/: CMakeLists.txt
Engine/Sample/: ActorUpdateSample.cpp  CMakeLists.txt  SimplePlayer.cpp  SimplePlayer.hpp
Engine/Scene/: CMakeLists.txt
Engine/Serialization/: CMakeLists.txt
Engine/Shader/: FullscreenQuad.vert.hlsl  FullscreenQuad.vert.metal  ParallaxMountains.frag.metal  ParallaxMountains.pixel.hlsl  Rain.frag.metal  Rain.pixel.hlsl  RainDroplet.frag.metal  RainDroplet.pixel.hlsl  RainStreak.frag.metal  RainStreak.pixel.hlsl  Sprite.pixel.hlsl  SpriteQuad.metal  SpriteQuad.vert.hlsl
Engine/UI/: CMakeLists.txt
Example/Actor/: CMakeLists.txt  CustomComponent.hpp  MyActor.cpp  MyActor.hpp
Runtime/App/: AppConfig.cpp  AppConfig.hpp  AppMainLoop.cpp  AppMainLoop.hpp  CMakeLists.txt  main.cpp
Source/: ArrowActor.cpp  ArrowActor.hpp  BowActor.cpp  BowActor.hpp  BowComponent.cpp  BowComponent.hpp  BoxActor.cpp  BoxActor.hpp  BushActor.cpp  BushActor.hpp  BushActorSpawner.cpp  BushActorSpawner.hpp  CMakeLists.txt  ElementalComponent.cpp  ElementalComponent.hpp  FireActor.cpp  FireActor.hpp  GameManager.cpp  GameManager.hpp  LogGame.hpp  PlayerCharacter.cpp  PlayerCharacter.hpp  TochLitActor.cpp  TochLitActor.hpp
Source/Example/: CMakeLists.txt  ExampleActor.cpp  ExampleActor.hpp  ExampleComponent.hpp  LogLocal.hpp
(+120 files in other folders)
