add_subdirectory(Core)

add_subdirectory(Log)
add_subdirectory(Platform)
add_subdirectory(Reflection)
add_subdirectory(RHI)
if(RENDER_BACKEND STREQUAL "DX11")
    add_subdirectory(DX11RHI)
elseif(RENDER_BACKEND STREQUAL "Metal")
    add_subdirectory(MetalRHI)
endif()
add_subdirectory(Serialization)

add_subdirectory(Input)
add_subdirectory(Render)
add_subdirectory(Scene)
